--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".controller.MainController"
+        android:name=".application.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_candy"
         android:label="@string/app_name"
@@ -15,8 +15,11 @@
         <activity
             android:name=".activity.GroupsActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".activity.LoginActivity" android:screenOrientation="portrait" android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activity.LoginActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,9 +28,9 @@
         </activity>
         <activity
             android:name=".activity.CreateGroupActivity"
-            android:theme="@style/AppTheme"
             android:parentActivityName=".activity.GroupsActivity"
-            />
+            android:theme="@style/AppTheme" />
+        <activity android:name=".GroupDetailActivity"></activity>
     </application>
 
 </manifest>
