--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_candy_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".activity.GroupsActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/app_name" />
         <activity
             android:name=".activity.LoginActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,9 +26,8 @@
         </activity>
         <activity
             android:name=".activity.CreateGroupActivity"
-            android:parentActivityName=".activity.GroupsActivity"
-            android:theme="@style/AppTheme" />
-        <activity android:name=".activity.GroupDetailActivity"/>
+            android:parentActivityName=".activity.GroupsActivity" />
+        <activity android:name=".activity.GroupDetailActivity" />
     </application>
 
 </manifest>
