--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         android:roundIcon="@mipmap/ic_candy_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-
         <activity
             android:name=".activity.GroupsActivity"
             android:label="@string/app_name" />
@@ -29,6 +28,7 @@
             android:name=".activity.CreateGroupActivity"
             android:parentActivityName=".activity.GroupsActivity" />
         <activity android:name=".activity.GroupDetailActivity" />
+        <activity android:name=".activity.MyWishListActivity"/>
     </application>
 
 </manifest>
