--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,8 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
+    implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.3'
+
     kapt "com.google.dagger:dagger-android-processor:$daggerVer"
     kapt "com.google.dagger:dagger-compiler:$daggerVer"
     kapt 'com.android.databinding:compiler:3.0.1'
